# AI-telemarketer

./: .gitignore  PRD.md  README.md  audio_test.py  dev_day1.md  dev_logs_day1.md  dev_plan_day2.md  direct_mic_test.py  programablevoicedocstwilio.md  setup.py  streamdocstwilio.md  stt_unit_test.py  transcriptor_original_example
Nova2/: .gitignore  README.md  debug_nova.py  nova.py  pyproject.toml  requirements.txt  setup_keys.py  telemarketer_requirements.txt
Nova2/app/: API.py  README_nova_server.md  audio_manager.py  call_state_manager.py  context_data.py  context_manager.py  database_manager.py  event_system.py  helpers.py  library_manager.py  llm_data.py  llm_manager.py  main.py  run_nova.py  script_parser.py  security_data.py  security_manager.py  stream_telemarketer.py  telemarketer_server.py  the_server.py  tool_data.py  tool_manager.py  transcriptor.py  transcriptor_data.py  tts_data.py  tts_manager.py  uk_call_regulations.py
Nova2/app/inference_engines/: __init__.py
Nova2/data/libraries/: internal_tools.json  prompt_library.json
Nova2/data/scripts/: telemarketer_script.md
Nova2/data/voices/: Laura.npy
Nova2/examples/1. LLM/: 1.1 Running inference.ipynb  1.2 Tool use.ipynb  1.3 Memory.ipynb  1.4 Conversations.ipynb
Nova2/examples/2. TTS/: 2.1 Running inference.ipynb  2.2 Cloning a voice.ipynb
Nova2/examples/3.  Context and Transcriptor.ipynb/: 3.1 Context datapoints.ipynb  3.2 Modifying context.ipynb  3.3 The transcriptor.ipynb
Nova2/tests/: conftest.py  test_llm.py
Nova2/tool_api/: __init__.py  tool_api.py
Nova2/tools/end_call/: end_call.py  (+1 more)
(+12 files in other folders)
